# epstein-ingest

./: .gitignore  README.md  _verify_embed8.py  content-filter-failures.json  content-filter-failures.pre-fix-canary.json  pyproject.toml  run.sh  run_ds12_ingest.py  run_media.py
assets/redaction/: README.md  generate_redaction_asset.py
docs/: CONTRACT-media-to-ingest.md  HANDOFF-SESSION-new-machine-stage2-prep.md  HANDOFF-dataset-summary.md  HANDOFF-ds01-07-stage5.md  HANDOFF-ds11-stage3-finish.md  HANDOFF-media-track.md  HANDOFF-stage1-execution.md  HANDOFF-stage2-execution.md  HANDOFF-stage2-render-classify-register.md  HANDOFF-stage3-dataset-layouts.md  HANDOFF-stage3-execution.md  HANDOFF-stage3-run-ds09-12.md  HANDOFF-stage3-text-summaries.md  HANDOFF-stage4-image-vision.md  HANDOFF-stage5-finalize-summary.md  HANDOFF-stage6-chunk.md  HANDOFF-stage7-embed.md  HANDOFF-stage8-ingest.md  HANDOFF-svkb-media-captions.md  HANDOFF-svkb-safety-redaction.md  HANDOFF-text-first-pdf-extraction.md  SAFETY-gaps-media.md  STRATEGY-pdf-ingestion-stages.md
src/: __init__.py
src/embed/: __init__.py  __main__.py  cli.py  collect.py  config.py  connection.py  provider.py  store.py  util.py  walk.py
src/ingest/: __init__.py  __main__.py  apply.py  blobs.py  cli.py  config.py  discover.py  emit.py  event.py  load.py  media.py  plan.py  record.py  register.py  safety.py  store_reader.py  tenancy.py  util.py  walk.py
src/media/: __init__.py  caption.py  caption_stage.py  chunk_stage.py  chunking.py  cliutil.py  common.py  config.py  connection.py  ffmpeg.py  frames_stage.py  probe.py  transcribe.py  transcribe_stage.py  vision.py
src/media_stage1/: __init__.py  cli.py
src/media_stage2/: __init__.py  cli.py
src/media_stage3/: __init__.py  cli.py
src/media_stage4/: __init__.py  cli.py
src/media_stage5/: __init__.py  cli.py
src/stage1/: __init__.py  classify.py  cli.py  config.py  document.py  images.py  page.py  quality.py  reconstruct.py  redaction.py  walk.py
src/stage2/: __init__.py  artifacts.py  classify.py  cli.py  config.py  escalate.py  process.py  render.py  walk.py
src/stage3/: __init__.py  batch.py  cli.py  client.py  config.py  connection.py  faillog.py  process.py  prompts.py  ratelimit.py  summarize.py  walk.py
src/stage4/: __init__.py  assets.py  cli.py  client.py  config.py  connection.py  embed.py  faillog.py  pregate.py  process.py  prompts.py  safety.py  walk.py
src/stage5/: __init__.py  cli.py  config.py  fuse.py  process.py  prompts.py  walk.py
src/stage6/: __init__.py  chunk.py  cli.py  config.py  process.py  walk.py
src/summary/: __init__.py  __main__.py  aggregate.py  cache.py  cli.py  collectors.py  config.py  embed_store.py  report.py  run.py  scan.py  util.py  walk.py
tests/: _demo.sh  _inspect.py  make_embed_fixtures.py  make_fixtures.py  make_ingest_fixtures.py  make_stage2_fixtures.py  make_stage3_fixtures.py  make_stage4_fixtures.py  make_stage5_fixtures.py  make_stage6_fixtures.py  make_summary_fixtures.py  run_embed_tests.py  run_ingest_media_tests.py  run_ingest_s9_tests.py  run_ingest_tests.py  run_media_tests.py  run_stage2_tests.py  run_stage3_tests.py  run_stage4_tests.py  run_stage5_tests.py  run_stage6_tests.py  run_summary_tests.py  run_tests.py  verify_ds10_ds11_embed.py  verify_ds12_embed.py  verify_embed_all.py
