[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "epstein-ingest"
version = "1.0.0"
description = "Staged ingestion pipeline: PDF track (text-first pre-extraction, render/classify, nano summaries + safety) + media track (probe, transcribe, frames/vision, chunk)"
requires-python = ">=3.10"
# Pinned: 1.27.2.3 has a fatal C-level bug (none_dealloc SIGABRT in get_texttrace()) on Linux/py3.10.
# 1.27.2 is validated against this corpus. Do not float past it without re-running the canary.
dependencies = ["PyMuPDF==1.27.2"]

[project.optional-dependencies]
# Optional: enables real-Markdown reconstruction on born-digital pages (Spec §6). The tool runs fully
# without it (falls back to structured_text). PyMuPDF + stdlib is the only required surface (Spec §3.8).
markdown = ["pymupdf4llm"]
# Stage 3 (Azure OpenAI summaries) is the only part that touches the network. Stages 1–2 stay stdlib +
# PyMuPDF; install this extra to run Stage 3. ``requests`` matches the sv-kb pipeline's HTTP client.
stage3 = ["requests>=2.31"]
# Media track (audio/video/standalone images). media_stage1/4 are stdlib-only (probe/chunk); the network
# stages (media_stage2 transcribe, media_stage3 vision/safety) need ``requests``. ffmpeg/ffprobe are a
# HARD runtime prerequisite for the media track (install separately; not a Python dependency).
media = ["requests>=2.31"]

[project.scripts]
text-first-extract = "src.stage1.cli:main"
text-first-extract-stage2 = "src.stage2.cli:main"
text-first-extract-stage3 = "src.stage3.cli:main"
media-probe = "src.media_stage1.cli:main"
media-transcribe = "src.media_stage2.cli:main"
media-frames = "src.media_stage3.cli:main"
media-caption = "src.media_stage4.cli:main"
media-chunk = "src.media_stage5.cli:main"

[tool.setuptools]
packages = ["src", "src.stage1", "src.stage2", "src.stage3", "src.media",
            "src.media_stage1", "src.media_stage2", "src.media_stage3", "src.media_stage4",
            "src.media_stage5"]
